--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #080808;
     margin: 0;
-    padding: 20px;
+    padding: 0;
 }
 
 h1 {
@@ -33,19 +33,12 @@ h1 {
     align-items: center;
 }
 
-#rodape{
-    width: 80%;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
 
 .patreon-button {
     background-color: #e53e3e;
     color: #fff;
     border: none;
-    padding: 10px 20px;
+    padding: 10px 30px;
     cursor: pointer;
     font-size: 16px;
 }
@@ -54,17 +47,41 @@ h1 {
     background-color: #c53030;
 }
 
-.social-media-section {
-    text-align: center;
-    margin: 20px 0;
+.social-icon {
+    width: 24px; /* Ajuste o tamanho conforme necessário */
+    height: 24px; /* Ajuste o tamanho conforme necessário */
+    margin: 40px 10px;/* Adiciona espaçamento horizontal entre os ícones */
 }
-
-.social-media-section a {
-    margin: 0 10px;
-}
-
 footer {
+    width: 100%;
+    padding: 20px;
+    background-color: #a01111;
+    box-shadow: 0 0 10px rgba(206, 64, 64, 0.1);
     text-align: center;
-    margin: 20px 0;
-    color: #666;
+    margin-top: 10px solid;
+    color: #000000;
 }
+/* tentativa novo menu */
+nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2px 0 0 0;
+}
+
+nav ul{
+   display: flex; 
+   margin: 0 10;
+    border-left: none;
+}
+
+nav ul li{
+    display: inline;
+    margin: 0 10;
+}
+
+nav ul li a {
+    padding: 20px ;
+}
+
+
